--- a/src/blocks/accordion-group/editor-styles.css
+++ b/src/blocks/accordion-group/editor-styles.css
@@ -1,3 +1,19 @@
+/* Variables that should be set in a theme */
+:root {
+	--color-primary: #5f00be;
+	--color-primary-faded: rgb(234 226 245);
+	--border-base-radius: 0.625rem;
+	--margin-between-blocks: 1rem;
+	--padding-base: 1rem;
+	--font-size-base: 1rem;
+	--font-family-base: sans-serif;
+}
+@media screen and (min-width: 768px) {
+	:root {
+		--padding-base: 1.25rem;
+	}
+}
+
 /**
  * The following styles get applied inside the editor only.
  *
@@ -11,4 +27,11 @@
 
 .wp-block-snap-blocks-accordion-group .block-list-appender {
 	position: static;
+}
+.wp-block-snap-blocks-accordion-group .components-button-group {
+	background-color: var(--color-primary-faded);
+	border: 1px solid var(--color-primary);
+	padding: var(--padding-base);
+	text-align: center;
+	width: 100%;
 }
