--- a/src/blocks/accordion/style.css
+++ b/src/blocks/accordion/style.css
@@ -5,7 +5,7 @@
 	--border-base-radius: 0.625rem;
 	--margin-between-blocks: 1rem;
 	--padding-base: 1rem;
-	--font-size-base: 1rem;
+	--font-size-base: 1.25rem;
 	--font-family-base: sans-serif;
 }
 @media screen and (min-width: 768px) {
@@ -46,10 +46,13 @@ button {
 /* Make the header text match no matter the selected semantic element */
 /* The double selector is a editor specific specificity hack, which when using our own theme, we possibly wouldn't need. */
 .wp-block-snap-blocks-accordion.wp-block-snap-blocks-accordion
-	:is(h2, h3, h4, h5, h6, p) {
+	> :is(h2, h3, h4, h5, h6, p) {
 	margin: 0;
 	font-size: var(--font-size-base);
 	font-family: var(--font-family-base);
+	line-height: 1.2;
+	text-transform: none;
+	font-weight: normal;
 }
 
 .accordion-header-button {
