--- a/src/blocks/accordion-group/editor-styles.css
+++ b/src/blocks/accordion-group/editor-styles.css
@@ -14,10 +14,13 @@
 	padding: var(--snap-accordion-group-padding);
 	text-align: center;
 	width: 100%;
+	margin-top: 0.5rem;
 }
 
 .wp-block-snap-blocks-accordion-group
 	.components-button-group
 	.components-button {
 	box-shadow: none;
+	background: var(--wp-admin-theme-color, #007cba);
+	margin: 0.5rem;
 }
